updated flash notice css to include if statement to fix spacing. updated homepages css to look like sample website

--- a/app/assets/stylesheets/homepages.scss
+++ b/app/assets/stylesheets/homepages.scss
@@ -16,3 +16,52 @@
 .spotlight__link-to {
   border-bottom: 2px solid;
 }
+
+.root__hr {
+  margin: 0px auto 3rem auto;
+  color: #EEEEEE;
+}
+
+.top-ten__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2em;
+}
+
+.top-ten__header {
+  color: #26A69A;
+  border-bottom: 2px solid;
+  border-bottom-color: #B2DFDB;
+}
+
+.top-ten__list {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.list-group {
+    display: flex;
+    flex-direction: column;
+    // padding-left: 0;
+    margin-bottom: 0;
+}
+
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: none;
+  // border: 1px solid rgba(0,0,0,0.125);
+}
+
+.list-group-item:first-child {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.top-ten__creator {
+  color: slategrey;
+}
